--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Container -->
     <div class="container">
-        <div class="input-container" id="input-container" hidden>
+        <div class="input-container" id="input-container" >
             <h1>Create a custom countdown!</h1>
             <form class="form" id="countdownForm">
                 <label for="title">Title</label>
@@ -40,7 +40,7 @@
             <button type="submit" class="countdown-button">Reset</button>
         </div>
 
-        <div class="complete" id="complete">
+        <div class="complete" id="complete" hidden>
             <h1 class="complete-title">Countdown complete</h1>
             <h1 class="complete-info">Countdown finished on 03.10.2177</h1>
             <button id="complete-button">New countdown</button>
