--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li><span>3</span>Minutes</li>
                 <li><span>3</span>Seconds</li>
             </ul>
-            <button type="submit" class="countdown-button">Reset</button>
+            <button type="submit" class="countdown-button" id="countdown-button">Reset</button>
         </div>
 
         <div class="complete" id="complete" hidden>
