--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Video -->
     <video class="video-background" loop muted autoplay>
-        <source src="/time.mp4">
+        <source src="./time.mp4">
     </video>
     <div class="video-overlay"></div>
 
@@ -42,7 +42,7 @@
 
         <div class="complete" id="complete" hidden>
             <h1 class="complete-title">Countdown complete</h1>
-            <h1 class="complete-info">Countdown finished on 03.10.2177</h1>
+            <h1 class="complete-info" id="complete-info">Countdown finished on 03.10.2177</h1>
             <button id="complete-button">New countdown</button>
         </div>
     </div>
